fix display on ios device

--- a/website/source/assets/stylesheets/_columns.scss
+++ b/website/source/assets/stylesheets/_columns.scss
@@ -4,7 +4,6 @@
 
   #sidebar-docs,
   .docs-body{
-    flex: 1;
   }
 }
 
